sites/all/themes/fj16/sass/_header.scss
#header {
	position: relative;
	width: 100%;
	height: 400px;
	background: #f2f2f2;

	font-family: $exo;
	text-transform: uppercase;

	background: url(../img/header_bg_1.jpg) center center;
	background-size: cover;

	@include respond(small) {
		background-image: url(../img/header_bg_1_small.jpg);
	}

	@include respond(mobile) {
		height: 300px;
	}


	#name-and-slogan {
		display: inline-block;
		position: absolute;
		left: 50%;
		top: 50px;
		margin-left: -93px;
		width: 196px;

		#site-slogan {
			display: none;
		}

		#site-name {
			a {
				display: inline-block;
				width: 196px;
				height: 270px;
				text-indent: -9999em;

				@include at2x('header_roihu_logo', 155px);
				background-repeat: no-repeat;
				background-position: center;

				@include respond(mobile) {
					width: 133px;
					height: 200px;
					display: block;
					margin: 20px auto;
					position: relative;
					top: 0; left: 0;
					background-size: 133px;
					
				}
			}
		}
	}

	#navigation {
		background: #000;
		min-height: 80px;

		position: absolute;
		bottom: 0;
		left: 0;
		width: 100%;
		overflow: visible;

		@include respond(1023px) {
			display: none;
		}

		&.fixed {
			position: fixed;
			top: 0;
			left: 0;
			height: 50px;
			min-height: 50px;
			z-index: 50;

			ul li {
				height: 50px;
				line-height: 50px;
			}
		}

		h2 {
			display: none;
		}

		ul {
			@extend .container;
			overflow: visible; // override .container
			padding: 0;

			li {
				display: inline-block;
				padding: 0 30px;
				margin: 0 -4px 0 0; // negative right margin to hide tha gap between inline-block items
				height: 80px;
				line-height: 80px;
				position: relative;

				&.active, &.active-trail, &:hover {
					background: $blue;
				}

				a {
					color: #fff;
				}
			}

			ul {
				display: none; // hode 2nd level by default
				position: absolute;
				top: 95%;
				left: 0;
				background: $blue;
				width: 300px;
				padding-top: 10px;

				li { // 2nd level
					text-transform: none;
					display: block;
					height: 50px;
					line-height: 50px;
					margin: -10px 0 0;
				}

				a:hover {
					text-decoration: underline;
				}
			}

			li:hover ul, ul:hover {
				display: block;
			}
		}
	}

	#top-bar {
		background: #dbdbdb;

		position: absolute;
		top: 0; left: 0;
		width: 100%;
		height: 50px;

		z-index: 50;

		@include respond(1023px) {
			background: #000;
		}

		ul {
			@extend .container;

			padding: 0;
			list-style-type: none;
			float: left;

			li {
				display: inline-block;
				padding: 0 30px;
				line-height: 50px;

				@include respond(mobile) {
					padding: 0 10px;
				}

				a {
					color: #000;
					text-decoration: none; // hide default strikethrough that untranslated links have

					@include respond(1023px) {
						color: #FFF;
					}
				}
			}
		}

		// Social media links
		ul.links {
			@include respond(1023px) {
				display: none; // The links are also in the mobile menu, so hide
			}
		}

		#block-language-switcher-fallback-language-switcher-fallback {
			display: none; // hide until multilingual content is done
			h2 {
				display: none;
			}

			ul {
				float: right;

				@include respond(1023px) {
					float: left;
				}
			}
		}

		#mobile-menu-toggle {
			display: none;

			@include respond(1023px) {
				display: block;
				height: 50px;
				width: 60px;
				padding: 10px;
				position: absolute;
				top: 0;
				right: 0;

				span {
					display: block;
					width: 40px;
					height: 5px;
					margin-top: 6px;
					background: #fff;

					&:first-child {
						margin-top: 2px;
					}
				}
			}
		}
	}
	
	#bg-slides {
		display: none;
	}

	#to-content {
		display: none;
	}

}

